--- a/meson.build
+++ b/meson.build
@@ -1,9 +1,10 @@
 project('Duplicate', 'vala', 'c', version: '0.2.0')
+i18n = import('i18n')
 
 add_project_arguments(
-    ['-DGETTEXT_PACKAGE="' + meson.project_name() + '"',
-    '-w'],
-    language:'c'
+  ['-DGETTEXT_PACKAGE="' + meson.project_name() + '"',
+  '-w'],
+  language:'c'
 )
 
 executable(
@@ -18,5 +19,8 @@ executable(
 )
 
 subdir('data')
+
+# gettext translations
+subdir('po')
 
 meson.add_install_script('meson/post_install.py')
