--- a/po/meson.build
+++ b/po/meson.build
@@ -1,4 +1,5 @@
-# build translations in LINGUAS
 i18n.gettext(meson.project_name (),
   args: ['--directory='+meson.source_root (), '--from-code=UTF-8', '-cTRANSLATORS']
 )
+
+subdir ('extra')
